add login and register page

--- a/login.html
+++ b/login.html
@@ -15,9 +15,6 @@
             <div class="text">
                 密&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;码：<input id="password" type="password" name="password" placeholder="请填写密码">
             </div>
-            <div class="text" id = "pass1">
-                确认密码：<input id="password1" type="password" name="password" placeholder="请确认密码">
-            </div>
             <div id="radio">
                 <input type="radio" name="usertype" value="0" checked>普通用户
                 <input type="radio" name="usertype" value="1">客服
@@ -25,7 +22,10 @@
             </div>
             <div class="btn">
                 <button id="login" type="submit">登录</button>
-                <button id="register" type="submit">注册</button>
+            </div>
+            <div class="linkaa">
+                <a class="link" href="register.html">注册</a>
+                <a class="" href="">忘记密码？</a>
             </div>
         </div>
     </div>
