--- a/index.html
+++ b/index.html
@@ -5,6 +5,23 @@
     <title>老夫子</title>
 </head>
 <body>
+    <nav>
+        <a href="">个人中心</a>
+        <a href="">退出</a>
+        <a href="">首页</a>
+        <a href="">购物车</a>
+        <a href="">我的订单</a>
+    </nav>
+    <section>
+        <div id="left">
 
+        </div>
+        <div id="center">
+
+        </div>
+    </section>
+    <footer>
+
+    </footer>
 </body>
 </html>
